Add Favicon and change image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A calculator that helps workout the calorie and macro intake for your goals">
-    <meta name="keywords" content="calorie counting, TDEE, BMR,  Macro, calculator, healthy, weight loss, weight gain, weight maintaince">
+    <meta name="keywords"
+        content="calorie counting, TDEE, BMR,  Macro, calculator, healthy, weight loss, weight gain, weight maintaince">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <title>Health Helper</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +51,7 @@
                 your ideal physique.</p>
 
         </div>
-            <img src="assets/images/cooking.jpg" alt="Lady preparing vegtables">
+        <img src="assets/images/cooking.jpg" alt="Lady preparing vegtables">
         <div id="form-box">
             <h3>Take the Test and take the first step towards a healthier you!</h3>
             <form id="form">
@@ -89,8 +94,7 @@
                     <br>
 
 
-                    <input type="radio" id="lightly-active" name="activity" value="lightly-active"
-                        required="required">
+                    <input type="radio" id="lightly-active" name="activity" value="lightly-active" required="required">
                     <label for="lightly-active">Lightly Active (light exercise 1-3 days / week)</label>
 
 
