--- a/results.html
+++ b/results.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <title>Health Helper</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +29,7 @@
            <div class="results">
              <div>Your Calorie Need to meet your Goal:<span id="calories"></span></div>
            </div>
-           <img src="assets/images/tape-and-berries.jpg" alt="Picture of Berries and a measuring tape">
+           <img src="assets/images/GreenVeg.jpg" alt="Picture of Berries and a measuring tape">
         <h2>Your Macros Broken down</h2>
         <div class="results">
             <div>Calories in carbohydrates:<span id="carbsCal"></span></div>
