Added comments to HMTL and CSS

--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html lang="en">
 
 <head>
+
+    <!--Meta data for browser-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A calculator that helps workout the calorie and macro intake for your goals">
     <meta name="keywords"
         content="calorie counting, TDEE, BMR,  Macro, calculator, healthy, weight loss, weight gain, weight maintaince">
+
+    <!--Link to CSS file-->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!--Favicon links-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="assets/images/site.webmanifest">
     <title>Health Helper</title>
+
+    <!--Link to google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
@@ -24,6 +32,8 @@
 <body>
     <main>
         <h1>Health Helper</h1>
+
+        <!--Introduction Text -->
         <div class="info-box">
             <h2>What is A TDEE (Total Daily Energy Expenditure) Calculator?</h2>
 
@@ -51,7 +61,11 @@
                 your ideal physique.</p>
 
         </div>
+
+        <!--Image to break up page-->
         <img src="assets/images/cooking.jpg" alt="Lady preparing vegtables">
+
+        <!--div to contain form for data input-->
         <div id="form-box">
             <h3>Take the Test and take the first step towards a healthier you!</h3>
             <form id="form">
@@ -148,11 +162,15 @@
 
             </form>
         </div>
+
+        <!--Footer to add disclaimer-->
         <footer>
             <p>Disclaimer: Health Helper is for informational purposes only. Consult a healthcare provider before making
                 health decisions.</p>
         </footer>
     </main>
+
+    <!--link to javascript file-->
     <script src="assets/js/script.js"></script>
 </body>
 
