Renamed images to remove Capitals

--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
         <div class="results">
             <div>Your Calorie Need to meet your Goal:<span id="calories"></span></div>
         </div>
-        <img src="assets/images/GreenVeg.jpg" alt="Picture of Berries and a measuring tape">
+        <img src="assets/images/green-veg.jpg" alt="Picture of Berries and a measuring tape">
         <h2>Your Macros Broken down</h2>
         <div class="results">
             <div>Calories in carbohydrates:<span id="carbsCal"></span></div>
